plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'  // Phiên bản mới nhất


	// cai nay de gui email xac thuc
//    implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Thêm các module khác cần thiết tại đây
//    testImplementation 'org.springframework.security:spring-security-test'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	runtimeOnly 'com.mysql:mysql-connector-j'
//	runtimeOnly 'org.springframework.boot:spring-boot-starter-tomcat'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

// token
	implementation 'io.jsonwebtoken:jjwt-api:0.11.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.3'
// model mapper
	implementation 'org.modelmapper:modelmapper:3.1.1'
// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-web'
	implementation 'org.springframework.security:spring-security-config'
// email xac thuc
	implementation 'org.springframework.boot:spring-boot-starter-mail'
// web-socket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

}

tasks.named('test') {
	useJUnitPlatform()
}
